# HCR_Genesis_LR_CL

./: .gitignore  README.md  pyproject.toml
.torch_extensions/gymtorch/: .ninja_deps  .ninja_log  build.ninja
legged_gym/: __init__.py
legged_gym/envs/: __init__.py
legged_gym/envs/base/: base_config.py  base_task.py  common_cfgs.py  legged_robot.py  legged_robot_config.py  legged_robot_cts.py  legged_robot_cts_config.py  legged_robot_dreamwaq.py  legged_robot_dreamwaq_config.py  legged_robot_ee.py  legged_robot_ee_config.py  legged_robot_nav.py  legged_robot_nav_config.py  legged_robot_ts.py  legged_robot_ts_config.py  (+1 more)
legged_gym/scripts/: joystick.py  play.py  play_ee.py  play_ts.py  play_waq.py  train.py
legged_gym/simulator/: __init__.py  genesis_simulator.py  isaacgym_simulator copy.py  isaacgym_simulator.py  isaaclab_simulator.py  simulator.py
legged_gym/utils/: __init__.py  constraint_manager.py  helpers.py  math_utils.py  terrain.py  terrain_utils.py
legged_gym/warp/: warp_cam.py
rsl_rl/algorithms/: __init__.py  base_algorithm.py  ppo.py  ppo_cts.py  ppo_dreamwaq.py  ppo_ee.py  ppo_ts.py
rsl_rl/modules/: __init__.py  actor_critic.py  actor_critic_cts.py  actor_critic_dreamwaq.py  actor_critic_ee.py  actor_critic_recurrent.py  actor_critic_ts.py  vae.py
rsl_rl/runners/: __init__.py  cts_runner.py  dreamwaq_runner.py  ee_runner.py  on_policy_runner.py  ts_runner.py
rsl_rl/storage/: __init__.py  rollout_storage.py  rollout_storage_cts.py  rollout_storage_dreamwaq.py  rollout_storage_ee.py  rollout_storage_ts.py
rsl_rl/utils/: utils.py
(+55 files in other folders)
