[project]
name = "LeggedGym-Ex"
version = "0.3.0"
requires-python = ">=3.8"
dependencies = [
                'matplotlib',
                'tensorboard',
                'xlsxwriter',
                'pandas',
                'wandb',
                'tqdm',
                'scipy',
                'torch',
                'torchvision',
                'numpy',
                'pygame',
                'trimesh',
                'warp-lang'
]

[project.optional-dependencies]
isaacgym = [
    "torch==2.4.1+cu121",
    'torchvision==0.19.1+cu121',
    "numpy==1.24.1",
    "pandas==2.0.3",
    "scipy==1.10.1",
    "matplotlib==3.7.5",
    "fsspec<=2025.3.0",  # fsspec==2025.3.1 has bug with python 3.8
    "isaacgym==1.0rc4",
    "onnx>=1.17.0"
]
genesis = [
    "torch==2.8.0+cu126",
    "torchvision==0.23.0+cu126",
    "genesis-world==0.3.14"
]
isaaclab = [
    "isaaclab==2.3.2.post1",
    "isaacsim==5.1.0.0"
]

[tool.setuptools]
packages = ['rsl_rl', 'resources', 'legged_gym']
